--- a/website1.html
+++ b/website1.html
@@ -8,28 +8,29 @@
     <meta name="description" content="A page all about Umar Begg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
-    <nav>
-      <ul class="info list">
-        <li><a href="#about">About Umar</a></li>
-        <li><a href="#facts">Umar Fun Facts</a></li>
-        <li><a href="#Quotes">Favourite Quotes</a></li>
-      </ul>
-    </nav>
-
-    <h1 id="about">All About Umar</h1>
-
-    <p id="first line">
+  <div class="header">
+    <h1>All About Umar</h1>
+    <p>
       If you wanted to find out more about <strong>Umar Begg</strong>, then
       you've come to the right place
     </p>
-
+  </div>
+  <div class="navbar">
+    <ul>
+      <a href="#about">About Umar</a>
+      <a href="#facts">Umar Fun Facts</a>
+      <a href="#Quotes">Favourite Quotes</a>
+    </ul>
+  </div>
+  <body>
+    <br />
+    <br />
     <img id="umar1" src="images/Umar1.png" alt="Umar2" 200px />
 
-    <p>
-      Umar was borning in Birmingham and has 6 siblings. He loves history, which
-      is what led him to his current career - a history teacher, where in
-      summary, he should at kids for a living.
+    <p id="about">
+      Umar was born in Birmingham and has 6 siblings. He loves history, which is
+      what led him to his current career - a history teacher, where in summary,
+      he should at kids for a living.
     </p>
 
     <h2 id="facts">Umar Fun Facts;</h2>
@@ -38,9 +39,11 @@
       <li>Likes Chess and BJJ (Brazilian Jiu Jitsu)</li>
       <li>Has climbed the highest mountain in North Africa (Jebel Toubkal)</li>
     </ul>
-
+    <br />
+    <br />
     <img id="umar2" src=images/umar2.png alt="Umar2" 500px>
-
+    <br />
+    <br />
     <h2 id="Quotes">Favourite Quotes</h2>
 
     <blockquote>
