--- a/website2.html
+++ b/website2.html
@@ -19,9 +19,14 @@
     <div class="bg-text">All About Umar</div>
 
     <div class="small-text">
-      Umar was born in Birmingham and has 6 siblings. He loves history, which is
-      what led him to his current career - a history teacher, where in summary,
-      he should at kids for a living
+      Umar was born in Birmingham and has 6 siblings. He has a love for history,
+      which is what led him to his current career - a history teacher, where in
+      summary, he should at kids for a living
+      <br />
+      Umar has started his coding journey at the School of Code and it enjoying
+      it so far!
+      <br />
+      Scroll down to see Umar's smiley face and one of his favourite quotes.
     </div>
 
     <div class="facts">
@@ -30,11 +35,12 @@
         <li>Umar has put on 8kg over the lockdowns</li>
         <li>He likes Chess and BJJ (Brazilian Jiu Jitsu)</li>
         <li>
-          Has climbed the highest mountain in North Africa (Jebel Toubkal)
+          He has climbed the highest mountain in North Africa (Jebel Toubkal)
         </li>
       </ul>
     </div>
     <div class="Github">
+      <p>Check out some of Umar's work here</p>
       <a href="https://github.com/UmarBegg" target="_blank"
         >Umar's Github Portfolio</a
       >
